# istina_v1

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  check_live_setup.py  main.py  pyproject.toml  requirements-dev.lock.txt
backend/: .gitignore  Makefile  pyproject.toml  requirements.txt
backend/app/: main.py
data/: .gitignore
docs/: ENVIRONMENT.md
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/src/: main.tsx
src/istina.egg-info/: top_level.txt
src/istina/config/: __init__.py
src/istina/controller/: cli_controller.py
tests/: test_article.py  test_article_roundtrip.py  test_bias_score.py  test_fetch_articles.py  test_integration_provider.py  test_retry.py  test_sanity_memory_repo.py
tests/test_controller/: test_analysis_service.py  test_analysis_service_analyze.py  test_cli_controller.py  test_ingest_service.py  test_summarize_command.py
tests/test_providers/: test_gemini_provider.py
tests/test_view/: test_render_report.py
v0/: .env.example  .gitignore  LICENSE  demo_mock_provider.py  requirements.txt
v0/docs/: GEMINI_LIVE_TESTS.md
v0/scripts/: smoke_test_rss.py
v0/tests/: conftest.py  test_article_id.py  test_article_serialization.py  test_article_validation.py  test_file_repository_roundtrip.py  test_json_compatibility.py  test_memory_repo_bias_score_storage.py  test_memory_repository_dedupe.py  test_rate_limiter.py  test_rss_adapter.py  test_rss_adapter_extended.py  test_rss_parse_entries.py  test_settings.py  test_settings_validation.py  test_stage1_config_and_logging.py
(+56 files in other folders)
